# NER-CO

./: .gitignore  README.md  pyproject.toml  run_pipe.bat
ner_cooking/: create-docBin.py  create-raw_text.py  create-training_data.py  create-word_vectore.py  ex-cat.py  ex-gloss.py  ex-rep.py  ex-rep_info.py  scraper.py
